--- a/angular/index.html
+++ b/angular/index.html
@@ -44,6 +44,11 @@
     <!-- Skitter Slider -->
     <link rel="stylesheet" href="libs/skitter-slider/skitter.css" type="text/css" />
     <link rel="stylesheet" href="libs/confirm/angular-confirm.css" type="text/css" />
+
+     <link data-require="pickadate.js@3.3.0" data-semver="3.3.0" rel="stylesheet" href="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/themes/classic.css" />
+  <link data-require="pickadate.js@3.3.0" data-semver="3.3.0" rel="stylesheet" href="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/themes/classic.date.css" />
+  <link data-require="pickadate.js@3.3.0" data-semver="3.3.0" rel="stylesheet" href="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/themes/classic.time.css" />
+  
     
     <!-- Skitter Slider -->
     <!-- // Main Css Files -->
@@ -137,6 +142,15 @@
     <script src="libs/skitter-slider/skitter.js"></script>
     <!-- Skitter Slider -->
 
+     <!-- Date Picker -->
+     <script data-require="pickadate.js@3.3.0" data-semver="3.3.0" src="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/picker.js"></script>
+  <script data-require="pickadate.js@3.3.0" data-semver="3.3.0" src="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/picker.date.js"></script>
+  <script data-require="pickadate.js@3.3.0" data-semver="3.3.0" src="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/picker.time.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.js"></script>
+
+       <script src="https://rawgit.com/Toilal/ng-pickadate/master/ng-pickadate.js"></script>s
+    <!-- Date Picker -->
+
     <!-- Select Dropdown -->
     <script src="libs/angular/angular-ui-select/dist/select.min.js"></script>
     <!-- Select Dropdown -->
@@ -158,16 +172,13 @@
     <script src="js/directives/ui-toggleclass.js"></script>
     <script src="js/directives/dirPagination.js"></script>
     <script src="js/controllers/bootstrap.js"></script>
-    <script src="js/directives/date.js"></script>
     <script src="js/directives/angular-bowser.js"></script>
     <script src="js/directives/ng-infinite-scroll.min.js"></script>
     <script src="js/modal-js/commisionmodal.js"></script>
     <script src="js/modal-js/productmodal.js"></script>
     <script src="js/modal-js/collaboratemodal.js"></script>
     <script src="js/modal-js/responsemodal.js"></script>
-    <script src="js/modal-js/todomodal.js"></script>
     <script src="js/modal-js/collaborateresponsemodal.js"></script>
-    <script src="js/modal-js/broadcastmodal.js"></script>
     <script src="js/modal-js/otpmodal.js"></script>
     <script src="js/modal-js/chatusermodal.js"></script>
     <script src="js/modal-js/requestmodal.js"></script>
