--- a/angular/tpl/blocks/modals/todo.html
+++ b/angular/tpl/blocks/modals/todo.html
@@ -1,21 +1,21 @@
-<script src="js/modal-js/broadcastmodal.js"></script>
-<div class="custom-modal" ng-controller="BroadcastModalCtrl">
-    <form class="form-horizontal" name="broadcastForm" novalidate ng-submit="addbroadCast(broadcastForm);">
+<script src="js/modal-js/todomodal.js"></script>
+<div class="custom-modal" ng-controller="TodoModalCtrl">
+    <form class="form-horizontal" name="todoForm" novalidate ng-submit="addtodo(todoForm);">
         <div class="custom-modal-title modal-orange">
             <div class="row flex-center">
                 <div class="col-lg-4 col-md-4">
-                    <h3><i class="fa fa-bolt"></i> Broadcast</h3>
+                    <h3><i class="fa fa-tasks"></i> Todo</h3>
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
-                    <div class="dropdown-label">Category</div>
-                    <ui-select ng-model="broadcastData.category" theme="bootstrap" ng-change="resetFeedItems()" search-enabled="false">
-                        <ui-select-match allow-clear="true" class="selected-item float-lt">
-                            <p><i class="fa fa-circle-o"></i> {{broadcastData.category ? broadcastData.category : 'Select Category'}}</p>
-                        </ui-select-match>
-                        <ui-select-choices repeat="type in servicetypes| filter: $select.search  track by $index ">
-                            <span ng-bind-html="type | highlight: $select.search"></span>
-                        </ui-select-choices>
-                    </ui-select>
+                    <div class="dropdown-label">Type</div>
+                     <ui-select ng-model="todoData.type" theme="bootstrap" ng-change="resetTodoItems()" search-enabled="false">
+                  <ui-select-match allow-clear="true" class="selected-item float-lt">
+                    <p><i class="fa fa-circle-o"></i> {{todoData.type ? todoData.type : 'Select type'}}</p>
+                  </ui-select-match>
+                  <ui-select-choices repeat="type in todotypes| filter: $select.search  track by $index ">
+                     <span ng-bind-html="type | highlight: $select.search"></span>
+            </ui-select-choices>
+         </ui-select>
                 </div>
             </div>
         </div>
@@ -31,9 +31,9 @@
                             <label class="control-label">Add Images</label>
                             <span class="error error-text" ng-if="imageerror">{{imageerrormsg}}</span>
                         </div>
-                        <input name="images" type="hidden" ng-model="broadcastData.productfile" ng-required="broadcastData.images.length == 0" class="broad-images">
+                        <input name="images" type="hidden" ng-model="todoData.productfile" ng-required="todoData.images.length == 0" class="broad-images">
                         <div class="upload-container" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid"
-                            ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-disabled="!broadcastData.category" ng-class="{'upload-btn-disabled': !broadcastData.category}" ng-if="!viewingThumb.file">
+                            ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-disabled="!todoData.type" ng-class="{'upload-btn-disabled': !todoData.type}" ng-if="!viewingThumb.file">
                             <div class="upload-inner">
                                 <div class="icon-container">
                                     <div class="img-holder"><img src="./../assets/img/upload.png" title="upload"></div>
@@ -68,20 +68,20 @@
                         </div>
 
                         <div class="form-group flex-center-space mb-0">
-                            <input type="text" class="form-control" placeholder="Embed video URL" name="videourl" ng-model="broadcastData.embedvideo" placeholder="Youtube / Vimeo / Soundcloud" ng-required="broadcastData.embedvideo" ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/"
-                                ng-disabled="!broadcastData.category || (broadcastData.images.length == 6 && editkey == null)">
-                            <button type="button" class="btn silver-btn ml-20" ng-click="uploadvideo();" ng-disabled="!broadcastData.category || (broadcastData.images.length == 6 && editkey == null)">Add</button>
+                            <input type="text" class="form-control" placeholder="Embed video URL" name="videourl" ng-model="todoData.embedvideo" placeholder="Youtube / Vimeo / Soundcloud" ng-required="todoData.embedvideo" ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/"
+                                ng-disabled="!todoData.type || (todoData.images.length == 6 && editkey == null)">
+                            <button type="button" class="btn silver-btn ml-20" ng-click="uploadvideo();" ng-disabled="!todoData.type || (todoData.images.length == 6 && editkey == null)">Add</button>
                         </div>
 
                         <div class="thumb-wrapper mt-30">
-                            <div class="thumbs" ng-repeat="(key,data) in broadcastData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="broadcastData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)"
+                            <div class="thumbs" ng-repeat="(key,data) in todoData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="todoData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)"
                            tooltip-class="preview-tooltip">
-                                <div class="thumb" ng-class="{'active' : key == broadcastData.thumbimage}" ngf-background="data.file" ng-if="data.filetype == 1 && data.isfile"></div>
-                                <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == broadcastData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
-                                <div class="thumb" ng-class="{'active' : key == broadcastData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
+                                <div class="thumb" ng-class="{'active' : key == todoData.thumbimage}" ngf-background="data.file" ng-if="data.filetype == 1 && data.isfile"></div>
+                                <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == todoData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
+                                <div class="thumb" ng-class="{'active' : key == todoData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
                             </div>
                             <div class="thumbs" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid"
-                                ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="broadcastData.images.length < 6" ng-disabled="!broadcastData.category">
+                                ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="todoData.images.length < 6" ng-disabled="!todoData.type">
                                 <div class="add-thumb">+</div>
                             </div>
                         </div>
@@ -95,14 +95,20 @@
 
                         <div class="form-group mb-0">
                             <label class="control-label">Title</label>
-                            <input type="text" class="form-control broad-title" name="title" placeholder="e.g. Title of the feed that you want to send to your friends" ng-model="broadcastData.title" required ng-disabled="!broadcastData.category" maxlength="100">
+                            <input type="text" class="form-control broad-title" name="title" placeholder="e.g. Title of the feed that you want to send to your friends" ng-model="todoData.title" required ng-disabled="!todoData.type" maxlength="100">
                             <span class="error error-text" ng-if="broadcasttitleerror">Enter Feed Title</span>
                         </div>
 
                         <div class="form-group mt-30 mb-0">
                             <label class="control-label">Description</label>
-                            <textarea class="form-control broad-description" rows="10" name="description" placeholder="This is where you can put a description of your feed." ng-model="broadcastData.description" required ng-disabled="!broadcastData.category" maxlength="1000"></textarea>
+                            <textarea class="form-control broad-description" rows="10" name="description" placeholder="This is where you can put a description of your feed." ng-model="todoData.description" required ng-disabled="!todoData.type" maxlength="1000"></textarea>
                             <span class="error error-text" ng-if="broadcastdescriptionerror">Enter Feed Description</span>
+                        </div>
+
+                         <div class="form-group mt-30 mb-0">
+                            <label class="control-label">Deadline</label>
+                            <input type="text" class="form-control broad-title" datepicker placeholder="Deadline" name="deadline" required readonly ng-model='todoData.tododeadline' ng-disabled="!todoData.type">
+                            <span class="error error-text" ng-if="broadcasttitleerror">Enter Feed Title</span>
                         </div>
 
                     </div>
