--- a/angular/index.html
+++ b/angular/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <base href="/project/Collabro/angular/">
-    <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
+    <!-- <base href="/project/Collabro/angular/"> -->
+    <base href="/collabro-v1/collabro-website/angular/" />
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -148,7 +148,7 @@
   <script data-require="pickadate.js@3.3.0" data-semver="3.3.0" src="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/picker.time.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.js"></script>
 
-       <script src="https://rawgit.com/Toilal/ng-pickadate/master/ng-pickadate.js"></script>s
+       <script src="https://rawgit.com/Toilal/ng-pickadate/master/ng-pickadate.js"></script>
     <!-- Date Picker -->
 
     <!-- Select Dropdown -->
