--- a/angular/tpl/blocks/modals/broadcast.html
+++ b/angular/tpl/blocks/modals/broadcast.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-4 col-md-4">
                     <h3><i class="fa fa-bolt"></i> Broadcast</h3>
                 </div>
-                <div class="col-lg-4 col-md-4 ml-15">
+                <div class="col-lg-4 col-md-4 ml-15 flex-center">
                     <div class="dropdown-label">Category</div>
                     <ui-select ng-model="broadcastData.category" theme="bootstrap" ng-change="resetFeedItems()" search-enabled="false">
                         <ui-select-match allow-clear="true" class="selected-item float-lt">
@@ -17,6 +17,7 @@
                         </ui-select-choices>
                     </ui-select>
                 </div>
+                <div class="col-lg-4 col-md-4"></div>
             </div>
         </div>
 
