--- a/angular/index.html
+++ b/angular/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <!-- <base href="/project/Collabro/angular/"> -->
-    <base href="/collabro-v1/collabro-website/angular/" />
+    <base href="/project/Collabro/angular/">
+    <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -44,10 +44,7 @@
     <!-- Skitter Slider -->
     <link rel="stylesheet" href="libs/skitter-slider/skitter.css" type="text/css" />
     <link rel="stylesheet" href="libs/confirm/angular-confirm.css" type="text/css" />
-
-     <link data-require="pickadate.js@3.3.0" data-semver="3.3.0" rel="stylesheet" href="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/themes/classic.css" />
-  <link data-require="pickadate.js@3.3.0" data-semver="3.3.0" rel="stylesheet" href="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/themes/classic.date.css" />
-  <link data-require="pickadate.js@3.3.0" data-semver="3.3.0" rel="stylesheet" href="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/themes/classic.time.css" />
+    <link rel="stylesheet" href="libs/datepicker/angular-datepicker.css" type="text/css" />
   
     
     <!-- Skitter Slider -->
@@ -69,7 +66,7 @@
     <script src="libs/chart/angular-chart.min.js"></script>
     <script src="libs/chart/chartjs-plugin-labels.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.js"></script>
+    <script src="libs/angular/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="libs/angular/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="libs/angular/ngstorage/ngStorage.js"></script>
     <script src="libs/angular/angular-ui-utils/ui-utils.js"></script>
@@ -143,12 +140,7 @@
     <!-- Skitter Slider -->
 
      <!-- Date Picker -->
-     <script data-require="pickadate.js@3.3.0" data-semver="3.3.0" src="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/picker.js"></script>
-  <script data-require="pickadate.js@3.3.0" data-semver="3.3.0" src="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/picker.date.js"></script>
-  <script data-require="pickadate.js@3.3.0" data-semver="3.3.0" src="https://rawgithub.com/amsul/pickadate.js/cab638a5cbf6d7b959096ed346d9216370cfb543/lib/picker.time.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.js"></script>
-
-       <script src="https://rawgit.com/Toilal/ng-pickadate/master/ng-pickadate.js"></script>
+       <script src="libs/datepicker/angular-datepicker.js"></script>
     <!-- Date Picker -->
 
     <!-- Select Dropdown -->
