--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -67,7 +67,7 @@
 
     <div class="right-wrapper">
         <div class="right-title-new">
-            <button type="button" class="btn success-btn block-btn" ng-click="opencollaboratemodal();">Create Group</button>
+            <button type="button" class="btn success-btn block-btn" ng-click="openCollaborateModal();">Create Group</button>
         </div>
     </div>
 
