--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 text-right flex-center-space">
                         <a class="btn secondary-btn" ng-click="openbroadcastModal()"><i class="fa fa-bolt mr-10"></i> BROADCAST</a>
-                        <a class="btn white-btn" href="#">POST <i class="fa fa-plus-circle ml-10"></i></a>                        
+                        <a class="btn white-btn" ng-click="openproductModal()">POST <i class="fa fa-plus-circle ml-10"></i></a>                        
                         <ul class="top-nav">
                             <li class="dropdown" ui-sref="app.notification">
                                 <a class="dropdown-toggle">
