--- a/angular/tpl/blocks/modals/todoModal.html
+++ b/angular/tpl/blocks/modals/todoModal.html
@@ -1,6 +1,8 @@
 <script src="js/modal-js/todomodal.js"></script>
 <div class="custom-modal" ng-controller="TodoModalCtrl">
     <form class="form-horizontal" name="todoForm" novalidate ng-submit="addtodo(todoForm);">
+        <input name="todofiles" type="hidden" ng-model="todoData.productfile" ng-required="todoData.images.length == 0 && todoData.type == 'Personal'">
+        <input name="project" type="hidden" ng-model="todoData.project" ng-required="todoData.type == 'Project'">
         <div class="custom-modal-title modal-orange">
             <div class="row flex-center">
                 <div class="col-lg-4 col-md-4">
@@ -8,14 +10,14 @@
                 </div>
                 <div class="col-lg-4 col-md-4 ml-15">
                     <div class="dropdown-label">Type</div>
-                     <ui-select ng-model="todoData.type" theme="bootstrap" ng-change="resetTodoItems()" search-enabled="false">
-                  <ui-select-match allow-clear="true" class="selected-item float-lt">
-                    <p><i class="fa fa-circle-o"></i> {{todoData.type ? todoData.type : 'Select type'}}</p>
-                  </ui-select-match>
-                  <ui-select-choices repeat="type in todotypes| filter: $select.search  track by $index ">
-                     <span ng-bind-html="type | highlight: $select.search"></span>
-            </ui-select-choices>
-         </ui-select>
+                    <ui-select ng-model="todoData.type" theme="bootstrap" ng-change="resetTodoItems()" search-enabled="false">
+                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                            <p><i class="fa fa-circle-o"></i> {{todoData.type ? todoData.type : 'Select type'}}</p>
+                        </ui-select-match>
+                        <ui-select-choices repeat="type in todotypes| filter: $select.search  track by $index ">
+                            <span ng-bind-html="type | highlight: $select.search"></span>
+                        </ui-select-choices>
+                    </ui-select>
                 </div>
             </div>
         </div>
@@ -25,13 +27,13 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-4 br-1">
-                    <div class="modal-left">
+                    <div class="modal-left" ng-if="!todoData.type || todoData.type == 'Personal'">
 
                         <div class="form-group mb-0">
                             <label class="control-label">Add Images</label>
                             <span class="error error-text" ng-if="imageerror">{{imageerrormsg}}</span>
                         </div>
-                        <input name="images" type="hidden" ng-model="todoData.productfile" ng-required="todoData.images.length == 0" class="broad-images">
+
                         <div class="upload-container" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid"
                             ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-disabled="!todoData.type" ng-class="{'upload-btn-disabled': !todoData.type}" ng-if="!viewingThumb.file">
                             <div class="upload-inner">
@@ -68,25 +70,46 @@
                         </div>
 
                         <div class="form-group flex-center-space mb-0">
-                            <input type="text" class="form-control" placeholder="Embed video URL" name="videourl" ng-model="todoData.embedvideo" placeholder="Youtube / Vimeo / Soundcloud" ng-required="todoData.embedvideo" ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/"
+                            <input type="text" class="form-control" placeholder="Youtube / Vimeo / Soundcloud" name="videourl" ng-model="todoData.embedvideo" ng-required="todoData.embedvideo" ng-pattern="/^(http[s]?:\/\/){0,1}(www\.){0,1}[a-zA-Z0-9\.\-]+\.[a-zA-Z]{2,5}[\.]{0,1}/"
                                 ng-disabled="!todoData.type || (todoData.images.length == 6 && editkey == null)">
                             <button type="button" class="btn silver-btn ml-20" ng-click="uploadvideo();" ng-disabled="!todoData.type || (todoData.images.length == 6 && editkey == null)">Add</button>
                         </div>
 
                         <div class="thumb-wrapper mt-30">
                             <div class="thumbs" ng-repeat="(key,data) in todoData.images" ng-click="chooseItem(key);" tooltip-template="'tpl/blocks/popover/thumbnailpopover.html'" tooltip-trigger="click" ng-if="todoData.images.length > 0" tooltip-is-open="ismodalPopover && (key == selectedKey)"
-                           tooltip-class="preview-tooltip">
+                                tooltip-class="preview-tooltip">
                                 <div class="thumb" ng-class="{'active' : key == todoData.thumbimage}" ngf-background="data.file" ng-if="data.filetype == 1 && data.isfile"></div>
                                 <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == todoData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
                                 <div class="thumb" ng-class="{'active' : key == todoData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
                             </div>
                             <div class="thumbs" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid"
-                                ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="todoData.images.length < 6" ng-disabled="!todoData.type">
+                                ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-if="todoData.images.length < 6" ng-disabled="!todoData.type">
                                 <div class="add-thumb">+</div>
                             </div>
                         </div>
                         <div class="upload-info mt-0"><i class="fa fa-info-circle"></i> Up to 6 representative Image and video</div>
+                    </div>
+                    <div class="modal-left" ng-if="!todoData.type || todoData.type == 'Project'">
+                        <div class="form-group mb-0">
+                            <label class="control-label">Project </label><span class="error error-text" ng-if="projecterror"> Select any one project</span>
+                            <ui-select ng-model="selectedproject" theme="bootstrap" ng-change="applyproject(selectedproject);" search-enabled="false">
+                                <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                    <p><i class="fa fa-circle-o"></i> {{selectedproject.title ? selectedproject.title : 'Select Project'}}</p>
+                                </ui-select-match>
+                                <ui-select-choices repeat="selectedproject in myprojects | filter: $select.search  track by $index ">
+                                    <span ng-bind-html=" selectedproject.title |  highlight: $select.search"></span>
+                                </ui-select-choices>
+                            </ui-select>
 
+                        </div>
+                        <div class="thumb-wrapper mt-30">
+                            <div class="thumbs" ng-repeat="(key,data) in todoData.selectedproject.files">
+
+                                <div class="thumb" ng-if="data.filetype == 1 && !data.isfile" ng-class="{'active' : key == todoData.thumbimage}" background-image="{{IMGURL}}{{data.file}}"></div>
+                                <div class="thumb" ng-class="{'active' : key == todoData.thumbimage}" background-image="{{data.thumbnail}}" ng-if="data.filetype == 2"></div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
 
@@ -96,42 +119,49 @@
                         <div class="form-group mb-0">
                             <label class="control-label">Title</label>
                             <input type="text" class="form-control broad-title" name="title" placeholder="e.g. Title of the feed that you want to send to your friends" ng-model="todoData.title" required ng-disabled="!todoData.type" maxlength="100">
-                            <span class="error error-text" ng-if="broadcasttitleerror">Enter Feed Title</span>
+                            <span class="error error-text" ng-if="todotitleerror">Enter Feed Title</span>
                         </div>
 
                         <div class="form-group mt-30 mb-0">
                             <label class="control-label">Description</label>
                             <textarea class="form-control broad-description" rows="10" name="description" placeholder="This is where you can put a description of your feed." ng-model="todoData.description" required ng-disabled="!todoData.type" maxlength="1000"></textarea>
-                            <span class="error error-text" ng-if="broadcastdescriptionerror">Enter Feed Description</span>
+                            <span class="error error-text" ng-if="tododescriptionerror">Enter Feed Description</span>
                         </div>
 
-                         <div class="form-group mt-30 mb-0">
+                        <div class="form-group mt-30 mb-0">
                             <label class="control-label">Deadline</label>
-                            <input type="text" class="form-control broad-title" datepicker placeholder="Deadline" name="deadline" required readonly ng-model='todoData.tododeadline' ng-disabled="!todoData.type">
-                            <span class="error error-text" ng-if="broadcasttitleerror">Enter Feed Title</span>
-                        </div>
+                            <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                                <div class="input-group">
+                                    <span class="input-group-addon" style="cursor: pointer">
+                                        <i class="fa fa-lg fa-calendar"></i>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Deadline" ng-model='todoData.tododeadline' ng-disabled="!todoData.type" name="deadline" required />
 
+                                </div>
+                            </datepicker>
+                            <span class="error error-text" ng-if="tododeadlineerror">Please select Deadline</span>
+                        </div>
                     </div>
+
                 </div>
 
             </div>
-        </div>
 
-        <!-- Modal footer -->
-        <div class="custom-modal-footer text-right">
-            <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
-            <button type="submit" class="btn success-btn ml-30">Publish Item</button>
+            <!-- Modal footer -->
+            <div class="custom-modal-footer text-right">
+                <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
+                <button type="submit" class="btn success-btn ml-30">Publish Item</button>
+            </div>
         </div>
     </form>
-
 </div>
 
 <style type="text/css">
     .thumb,
-    .upload-wrapper {
-        background-repeat: no-repeat!important;
-        background-position: center center!important;
-        background-size: cover!important;
-        background-size: 100%!important;
-    }
+        .upload-wrapper {
+            background-repeat: no-repeat!important;
+            background-position: center center!important;
+            background-size: cover!important;
+            background-size: 100%!important;
+        }
 </style>
