modals update and fixes

--- a/angular/tpl/blocks/modals/collaborateModal.html
+++ b/angular/tpl/blocks/modals/collaborateModal.html
@@ -19,6 +19,7 @@
                         </ui-select-choices>
                     </ui-select>
                 </div>
+                <div class="col-lg-4 col-md-4"></div>
             </div>
         </div>
 
