--- a/angular/tpl/blocks/modals/productModal.html
+++ b/angular/tpl/blocks/modals/productModal.html
@@ -155,7 +155,7 @@
                                 <label class="control-label">From</label>
                                 <input type="button" class="btn silver-btn block-btn" value="08:00" />
                             </div>
-                            <div class="form-group ml-30">
+                            <div class="form-group ml-20">
                                 <label class="control-label">To</label>
                                 <input type="button" class="btn silver-btn block-btn" value="16:00" />
                             </div>
@@ -190,7 +190,7 @@
 
     <!-- Modal footer -->
     <div class="custom-modal-footer text-right">
-        <a class="btn danger-btn" href="#">Cancel</a>
+        <button type="button" class="btn danger-btn" ng-click="closeModal()">Cancel</button>
         <a href="#" class="btn success-btn ml-30">Publish Item</a>
     </div>
 
