--- a/angular/tpl/blocks/modals/productModal.html
+++ b/angular/tpl/blocks/modals/productModal.html
@@ -115,12 +115,12 @@
                                 <div class="form-group wd-100">
                                     <label class="control-label">Location</label>
                                     <ui-select name="location" ng-model="formData.location" theme="bootstrap" search-enabled="false" ng-disabled="!formData.type" onkeypress="return false;" onfocus="blur();">
-                                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                        <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
                                             <p>
                                                 <!-- <i class="fa fa-circle-o"></i>  -->{{formData.location ? formData.location : 'Select Location'}}
                                             </p>
                                         </ui-select-match>
-                                        <ui-select-choices repeat="location in locations">
+                                        <ui-select-choices class="default-select-items" repeat="location in locations">
                                             <span ng-bind-html="location | highlight: $select.search"></span>
                                         </ui-select-choices>
                                     </ui-select>
@@ -130,12 +130,12 @@
                                 <div class="form-group wd-100">
                                     <label class="control-label">Skills</label>
                                     <ui-select name="profession" ng-model="formData.profession" theme="bootstrap" search-enabled="false" ng-disabled="!formData.type" ng-required="formData.type=='Service'" onkeypress="return false;" onfocus="blur();">
-                                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                        <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
                                             <p>
                                                 <!-- <i class="fa fa-circle-o"></i>  -->{{formData.profession ? formData.profession : 'Select Skill'}}
                                             </p>
                                         </ui-select-match>
-                                        <ui-select-choices repeat="profession in professions">
+                                        <ui-select-choices class="default-select-items" repeat="profession in professions">
                                             <span ng-bind-html="profession | highlight: $select.search"></span>
                                         </ui-select-choices>
                                     </ui-select>
@@ -159,12 +159,12 @@
                                 <div class="form-group wd-100">
                                     <label class="control-label">&nbsp;</label>
                                     <ui-select name="periodtype" ng-model="formData.periodtype" theme="bootstrap" search-enabled="false" ng-disabled="!formData.type" onkeypress="return false;" onfocus="blur();">
-                                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                        <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
                                             <p>
                                                 <!-- <i class="fa fa-circle-o"></i>  -->{{formData.periodtype ? formData.periodtype : 'Select Period Type'}}
                                             </p>
                                         </ui-select-match>
-                                        <ui-select-choices repeat="periodtype in periodtypes">
+                                        <ui-select-choices  class="default-select-items" repeat="periodtype in periodtypes">
                                             <span ng-bind-html="periodtype | highlight: $select.search"></span>
                                         </ui-select-choices>
                                     </ui-select>
@@ -250,7 +250,7 @@
                                 <div class="form-group wd-100">
                                     <label class="control-label">&nbsp;</label>
                                     <ui-select name="periodtype" ng-model="formData.periodtype" theme="bootstrap" search-enabled="false" ng-disabled="!formData.type" onkeypress="return false;" onfocus="blur();">
-                                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                        <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
                                             <p>{{formData.periodtype ? formData.periodtype : 'Select Period Type'}}</p>
                                         </ui-select-match>
                                         <ui-select-choices repeat="periodtype in periodtypes">
@@ -317,10 +317,10 @@
                                 <div class="form-group wd-100">
                                     <label class="control-label">&nbsp;</label>
                                     <ui-select name="periodtype" ng-model="formData.periodtype" theme="bootstrap" search-enabled="false" ng-disabled="!formData.type" onkeypress="return false;" onfocus="blur();">
-                                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                        <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
                                             <p>{{formData.periodtype ? formData.periodtype : 'Select Period Type'}}</p>
                                         </ui-select-match>
-                                        <ui-select-choices repeat="periodtype in periodtypes">
+                                        <ui-select-choices class="default-select-items" repeat="periodtype in periodtypes">
                                             <span ng-bind-html="periodtype | highlight: $select.search"></span>
                                         </ui-select-choices>
                                     </ui-select>
@@ -333,10 +333,10 @@
                                 <div class="form-group wd-100" ng-if="formData.type == 'Event'">
                                     <label class="control-label">From</label>
                                     <ui-select name="starttime" ng-model="formData.starttime" theme="bootstrap" search-enabled="false" onkeypress="return false;" onfocus="blur();">
-                                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                        <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
                                            <p>{{formData.starttime ? formData.starttime : 'Select StartTime'}}</p>
                                         </ui-select-match>
-                                        <ui-select-choices repeat="starttime in times">
+                                        <ui-select-choices class="default-select-items" repeat="starttime in times">
                                            <span ng-bind-html="starttime | highlight: $select.search"></span>
                                         </ui-select-choices>
                                      </ui-select>
@@ -352,11 +352,11 @@
                                 <div class="form-group wd-100" ng-if="formData.type == 'Event'">
                                     <label class="control-label">To</label>
                                     <ui-select name="endtime" ng-model="formData.endtime" theme="bootstrap" search-enabled="false">
-                                        <ui-select-match allow-clear="true" class="selected-item float-lt">
+                                        <ui-select-match allow-clear="true" class="selected-item wd-auto float-lt">
                                            <p>{{formData.endtime ? formData.endtime : 'Select EndTime'}}
                                            </p>
                                         </ui-select-match>
-                                        <ui-select-choices repeat="endtime in times">
+                                        <ui-select-choices class="default-select-items" repeat="endtime in times">
                                            <span ng-bind-html="endtime | highlight: $select.search"></span>
                                         </ui-select-choices>
                                      </ui-select>
@@ -385,6 +385,100 @@
                         </div>
                     </div>
                     <div class="modal-right" ng-if="activediv =='address'">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group">
+                                    <label class="control-label">Address</label>
+                                    <textarea class="form-control" rows="4" placeholder="Address"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="form-group">
+                                    <label class="control-label">Business Email</label>
+                                    <input type="email" class="form-control" placeholder="Email" />
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6">
+                                        <div class="form-group">
+                                            <input class="magic-checkbox"
+                                                type="checkbox"
+                                                name="layout"
+                                                id="private"
+                                                value="option"
+                                            />
+                                            <label class="text" for="allday">Private</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6">
+                                        <div class="form-group">
+                                            <input class="magic-checkbox"
+                                                type="checkbox"
+                                                name="layout"
+                                                id="public"
+                                                value="option"
+                                            />
+                                            <label class="text" for="allday">Public</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">  
+                                <div class="row">
+                                    <div class="col-lg-8 col-md-8">
+                                        <div class="form-group">
+                                            <label class="control-label">Postal code</label>
+                                            <input type="text" class="form-control" placeholder="postal code" />
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-4">
+                                        <div class="form-group">
+                                            <label class="control-label">&nbsp;</label>
+                                            <input class="magic-checkbox"
+                                                type="checkbox"
+                                                name="layout"
+                                                id="map"
+                                                value="option"
+                                            />
+                                            <label class="text" for="allday">Show map</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-group">
+                                    <label class="control-label">Order Link (Optional)</label>
+                                    <input type="text" class="form-control" placeholder="Prodyuct order or Booking link" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-4">
+                                        <label class="control-label">&nbsp;</label>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="+91" />
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-8 col-md-8">
+                                        <div class="form-group">
+                                            <label class="control-label">&nbsp;</label>
+                                            <input type="text" class="form-control" placeholder="9999 9999" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="form-row mt-15">
                             <div class="form-column flex-center-space">
                                 
