css removed from internal html

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -124,7 +124,7 @@
     <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
 </div> 
 
-<style type="text/css">
+<!-- <style type="text/css">
     .broadcastmodal .ng-confirm-content-pane {
         min-height: 700px;
     }.broadcastmodal .ng-confirm-title-c{
@@ -134,4 +134,4 @@
     }.broadcastmodal .control-label{
         text-align: left!important;
     }
-</style>
+</style> -->
